--- a/sty.css
+++ b/sty.css
@@ -20,12 +20,34 @@ body{
     box-shadow: 0px 14px 26px rgba(0,0,0,0.4);
 } */
 
-header .banner h1:hover{
+.banner:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 600px;
+    z-index: 1;
+    background: linear-gradient(to bottom,#000,transparent);
+}
+
+.banner:after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 600px;
+    z-index: 1;
+    background: linear-gradient(to top,#000,transparent);
+}
+
+/* header .banner h1:hover{
     transform: scale(1.1);
     transition: 0.4s ease-in-out;
     transition-delay: 0.1s;
     filter: brightness(70%);
-}
+} */
 
 header .banner img{
     position: relative;
@@ -43,6 +65,7 @@ ul{
     right: 20px;
     float: right;
     list-style-type: none;
+    z-index: 1000;
     margin-top: 25px;
 }
 
@@ -52,7 +75,7 @@ ul li{
 
 ul li a{ 
       text-decoration:  none;
-      color: #000;
+      color: #fff;
       padding: 5px 20px;
       border: 1px transparent;
       transition: 0.6s ease;
@@ -86,6 +109,7 @@ ul li.active a{
     height: 18%;
     border-radius: 50%;
     align-items: center;
+    z-index: 1000;
     box-shadow: 0px 16px 16px rgba(0, 0, 0, 0.4);
 }
 
@@ -105,6 +129,7 @@ header .box{
     height: 15vh;
     border-radius: 3px;
     padding: 10px 0px 0px 20px;
+    z-index: 1000;
     box-shadow: 0px 16px 16px rgba(0, 0, 0, 0.4);
 }
 
@@ -127,7 +152,96 @@ header .box{
 .welcome p{
     position: absolute;
     top: 40%;
-    left: 25%;
+    left: 27%;
+    color: white;
     align-items: center;
+    z-index: 1000;
     font-size: 30px;
+}
+
+.back img{
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    height: 40px;
+    width: 40px;
+    z-index: 1000;
+}
+
+.detail{
+   position: absolute;
+   top: 50%;
+   left: 0%;
+   height: 0%;
+   width: 100%;
+   display: flex;
+   padding: 0 0;
+   /* align-items: center; */
+}
+
+.about{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    align-items: left;
+    display: left;
+}
+
+.about h1{
+    position: relative;
+    top: 50%;
+    left: 30%;
+    display: inline;
+    color: #49A0AE;
+    z-index: 1000;
+}
+
+.about p{
+    position: relative;
+    top: 50%;
+    left: 30%;
+    height: 20%;
+    width: 20%;
+    color: white;
+    z-index: 1000;
+}
+
+.detail .details{
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    height: -100%;
+    width: 10%;
+    align-items: left;
+    display: inline;
+    margin-left: 30%;
+    /* padding: 0% 60%; */
+}
+
+.details h1{
+    position: relative;
+    top: 50%;
+    left: 30%;
+    display: inline;
+    color: #49A0AE;
+    z-index: 1000;
+}
+
+.details p{
+    position: relative;
+    top: 50%;
+    left: 30%;
+    height: 20%;
+    width: 20%;
+    color: white;
+    z-index: 1000;
+}
+
+.details h2{
+    position: relative;
+    top: 50%;
+    left: 30%;
+    color: white;
+    font: bold;
+    z-index: 1000;
 }
